# snake-game

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  resource.rc  snakeversion.h  snakeversion.h.in
src/controls/: registereditcontrol.cpp  registereditcontrol.h
src/entities/: apple.cpp  apple.h  gametypes.h  geometrytypes.h  heart.cpp  heart.h  imagecontainer.cpp  imagecontainer.h  snake.cpp  snake.h  snakesegment.cpp  snakesegment.h
src/services/: gdipluspainter.cpp  gdipluspainter.h  gridaligner.cpp  gridaligner.h  settings.cpp  settings.h
src/widgets/: changemode.cpp  changemode.h  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  recordswindow.cpp  recordswindow.h  snakegame.cpp  snakegame.h
